<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="PasswordChangeBinding">

        <variable
            name="viewModel"
            type="com.soulfriends.meditation.viewmodel.PasswordChangeViewModel">

        </variable>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/headerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/mainLayout"
                    android:layout_alignParentTop="true">

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="316dp"
                        app:srcCompat="@drawable/ic_close" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:singleLine="true"
                            android:text="@string/password_change_title"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="350dp"
                    android:layout_height="343dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_change_cur" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textVisiblePassword">

                        <!--                    <requestFocus />-->
                    </EditText>

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_change_cur_error" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_change_new" />

                    <EditText
                        android:id="@+id/email2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textVisiblePassword">

                        <!--                    <requestFocus />-->
                    </EditText>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <TextView
                        android:id="@+id/tv_passwordFind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_find" />

                    <Button
                        android:id="@+id/bt_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="login"
                        android:text="@string/password_change_do" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/footerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mainLayout"
                    android:layout_alignParentBottom="true">

                    <LinearLayout
                        android:id="@+id/bottom_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="false"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:indeterminateDrawable="@drawable/progress_rotate"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>